--- a/qr-code-component-main/qr-code-component-main/index.html
+++ b/qr-code-component-main/qr-code-component-main/index.html
@@ -13,14 +13,14 @@
   
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  
   
 </head>
 <body>
 
   <div class = "container">
     <div class = "qr-code" >
-      <img src = "./images/image-qr-code.png"alt = "A QR code"> 
+      <img src = "./images/image-qr-code.png" alt = "A blue QR code linking to Frontend Mentor"> 
       <h3> Improve your front-end skills by building projects </h3>
       <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
